--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "devDependencies": {
         "axios": "^1.1.2",
-        "laravel-mix": "^6.0.49"
+        "laravel-mix": "^6.0.49",
+        "webpack-cli": "^5.1.4"
     }
 }
