--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
         "development": "mix",
         "watch": "mix watch",
         "hot": "mix watch --hot",
-        "production": "mix --production"
+        "production": "mix --production",
+        "build": "npm run production && composer install --optimize-autoloader --no-dev"
     },
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-mix": "^6.0.49",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.77.5",
+        "sass-loader": "^12.1.0",
         "webpack-cli": "^5.1.4"
     }
 }
