--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "watch": "mix watch",
         "hot": "mix watch --hot",
         "production": "mix --production",
-        "build": "npm run production && composer install --optimize-autoloader --no-dev"
+        "build": "npm run production"
     },
     "devDependencies": {
         "axios": "^1.1.2",
